Switch to webpack

--- a/resume.html
+++ b/resume.html
@@ -10,14 +10,14 @@
         <h1 class="header__title"><a href="./" class="header__link">Kirk Longuski</a></h1>
         <h2 class="header__subtitle">Ann Arbor Web Developer</h2>
         <nav class="nav__wrapper nav__wrapper--horizontal mobile-only"><a href="./" class="nav__link nav__link--horizontal">home</a><a href="//drive.google.com/file/d/1VBmezzae2BHA52Iff2zDaoNC5xp1SBYb/view?usp=sharing" class="nav__link nav__link--horizontal">resume</a><a id="show-more-trigger" href="#0" class="nav__trigger nav__trigger--horizontal">more...</a>
-          <div class="nav__overflow nav__overflow--hidden"><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--overflow">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--overflow">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--overflow">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--overflow">work</a>
+          <div class="nav__overflow nav__overflow--hidden"><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--overflow">reddit</a><a href="./site-code.html" class="nav__link nav__link--overflow">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--overflow">work</a>
           </div>
         </nav>
       </header>
     </header>
     <div class="wrapper">
       <div class="leftnav desktop-only">
-        <nav class="nav__wrapper nav__wrapper--vertical desktop-only"><a href="./" class="nav__link nav__link--vertical">home</a><a href="//drive.google.com/file/d/1VBmezzae2BHA52Iff2zDaoNC5xp1SBYb/view?usp=sharing" class="nav__link nav__link--vertical">resume</a><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--vertical">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--vertical">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--vertical">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--vertical">work</a>
+        <nav class="nav__wrapper nav__wrapper--vertical desktop-only"><a href="./" class="nav__link nav__link--vertical">home</a><a href="//drive.google.com/file/d/1VBmezzae2BHA52Iff2zDaoNC5xp1SBYb/view?usp=sharing" class="nav__link nav__link--vertical">resume</a><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--vertical">reddit</a><a href="./site-code.html" class="nav__link nav__link--vertical">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--vertical">work</a>
         </nav>
       </div>
       <div class="main">
@@ -68,6 +68,7 @@
             <div class="experience">
               <h4>Experience</h4>
               <ul>
+                <li><span class="company"> Deepfueld</span><span class="type">Software Engineer</span><span class="subtype">Front End | React</span><span class="years">2017-Present</span></li>
                 <li><span class="company"> Mountain Pass Solutions</span><span class="type">Web Developer</span><span class="subtype">Front End</span><span class="years">2016-2017</span></li>
                 <li><span class="company">DotSignal</span><span class="type">Web Developer</span><span class="subtype">Full Stack</span><span class="years">2014-2016</span></li>
                 <li><span class="company">Northwood University</span><span class="type">PC Tech</span><span class="years">2012-2014</span></li>
@@ -78,7 +79,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2020</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2020</span><span class="footer__text--optional">|Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span>
     </footer>
   </body>
   <script src="./public/script/serve.js"></script>
