--- a/site-code.html
+++ b/site-code.html
@@ -9,12 +9,12 @@
       <h1 class="header__title"><a href="./" class="header__link">Kirk Longuski</a></h1>
       <h2 class="header__subtitle">Ann Arbor Web Developer</h2>
       <nav class="nav__wrapper nav__wrapper--horizontal mobile-only"><a href="./" class="nav__link nav__link--horizontal">home</a><a href="//drive.google.com/file/d/1VBmezzae2BHA52Iff2zDaoNC5xp1SBYb/view?usp=sharing" class="nav__link nav__link--horizontal">resume</a><a id="show-more-trigger" href="#0" class="nav__trigger nav__trigger--horizontal">more...</a>
-        <div class="nav__overflow nav__overflow--hidden"><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--overflow">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--overflow">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--overflow">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--overflow">work</a>
+        <div class="nav__overflow nav__overflow--hidden"><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--overflow">reddit</a><a href="./site-code.html" class="nav__link nav__link--overflow">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--overflow">work</a>
         </div>
       </nav>
     </header>
     <div class="wrapper">
-      <nav class="nav__wrapper nav__wrapper--vertical desktop-only"><a href="./" class="nav__link nav__link--vertical">home</a><a href="//drive.google.com/file/d/1VBmezzae2BHA52Iff2zDaoNC5xp1SBYb/view?usp=sharing" class="nav__link nav__link--vertical">resume</a><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--vertical">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--vertical">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--vertical">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--vertical">work</a>
+      <nav class="nav__wrapper nav__wrapper--vertical desktop-only"><a href="./" class="nav__link nav__link--vertical">home</a><a href="//drive.google.com/file/d/1VBmezzae2BHA52Iff2zDaoNC5xp1SBYb/view?usp=sharing" class="nav__link nav__link--vertical">resume</a><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--vertical">reddit</a><a href="./site-code.html" class="nav__link nav__link--vertical">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--vertical">work</a>
       </nav>
       <div class="main">
         <div class="site-build">
@@ -150,8 +150,7 @@
             </p>
             <p>
               The most JavaScript intensive portion is the expertise table, what with the sorting
-              and the hover states. In fact, I spun the table sorting off into a separate project, which you can see at.
-              as of right now, Dead Simple Tables is dogfooded into this site.&nbsp;<a href="https://github.com/longooglite/Dead-Simple-Tables">Dead Simple Tables</a>
+              and the hover states.
             </p>
           </div>
           <div class="build">
@@ -221,7 +220,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2020</span><span class="footer__text--optional">|I was voted Most Likely to Take Over the World in high school</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2020</span>
     </footer>
     <script src="public/script/serve.js"></script>
   </body>
