Fix resume link

--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
         <div class="resume">
           <h3>
             Resume
-            [<a href="https://drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing" class="resume-link">PDF</a>]
+            [<a href="https://docs.google.com/document/d/1pfRbMab28jHi8G5SMI859t81Tea-t-9nwaLaW9DY-Do/edit?usp=sharing" class="resume-link">PDF</a>]
           </h3>
           <div class="resume-body">
             <div class="skills">
@@ -79,7 +79,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2020</span><span class="footer__text--optional">|Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2020</span>
     </footer>
   </body>
   <script src="./public/script/serve.js"></script>
