--- a/work.html
+++ b/work.html
@@ -52,7 +52,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2020</span><span class="footer__text--optional">|I was voted Most Likely to Take Over the World in high school</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2020</span><span class="footer__text--optional">|Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span>
     </footer>
     <div id="lightbox" class="lightbox lightbox-hidden">
       <div id="lightbox-text-content" class="lightbox-text-content"></div><img id="lightbox-image" class="lightbox-image">
